--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,18 @@
 __pycache__/
 *.py[cod]
 *$py.class
+.DS_Store
+ny_taxi_postgres_data/
+*.csv
 
 # C extensions
 *.so
 
 # Distribution / packaging
+.terraform
+.tfstate
+*.tfstate
+*..tfstate*
 .Python
 build/
 develop-eggs/
